@@ -2,6 +2,8 @@
 import base64
 import re
 import urllib.parse
+import os
+import json
 
 from resources.lib.ui import client, control, utils
 
@@ -120,8 +122,18 @@ class BrowserBase(object):
 
     @staticmethod
     def embeds():
-        return [
+        default_embed_providers = [
             'doodstream', 'filelions', 'filemoon', 'hd-2', 'iga', 'kwik',
             'megaf', 'moonf', 'mp4upload', 'mp4u', 'mycloud', 'noads', 'noadsalt',
             'swish', 'streamtape', 'streamwish', 'vidcdn', 'vidplay', 'vidstream',
-            'yourupload', 'zto']
+            'yourupload', 'zto'
+        ]
+
+        # Load the embed providers from the JSON file if it exists
+        if os.path.exists(control.embeds_json):
+            with open(control.embeds_json, 'r') as f:
+                embed_providers = json.load(f)
+        else:
+            embed_providers = default_embed_providers
+
+        return embed_providers
